# ragger

./: .gitignore  AGENT.md  README.md  main.py  pyproject.toml  ragger_cli.py  ragger_server.py
conductor/: rag-experiment-plan.md
docs/: openapi.json  usage.md
pi-ragger/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
rag/: __init__.py  engine.py  ingestor.py  workspaces.py
ragger/: __init__.py  config.py  models.py
ragger/cli/: __init__.py  __main__.py  main.py
ragger/core/: __init__.py  health.py  ingest.py  metadata.py  search.py  workspaces.py
ragger/server/: __init__.py  __main__.py  app.py  schemas.py
ragger/server/routes/: __init__.py  health.py  workspaces.py
ragger/tui/: __init__.py  __main__.py  app.py  commands.py  panels.py
scripts/: export_openapi.py  test_gemma_langchain.py  test_ingest.py  test_ollama_chat.py
tests/: test_commands.py  test_panels.py  test_server.py
tests/unit/: test_commands.py  test_ingest.py  test_panels.py  test_search.py  test_server.py
tui/: app.py
