[project]
name = "ragger"
version = "0.1.0"
description = "Local codebase RAG experiments with LangChain"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "huggingface-hub>=0.33.0",
    "llama-cpp-python>=0.3.0",
    "textual>=0.80.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
]

[project.scripts]
ragger-tui = "ragger.tui.app:main"
ragger-server = "ragger.server.app:main"
ragger-cli = "ragger.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = '''
/(
  \.venv
  | pi-ragger/node_modules
  | \.chroma_db
)/
'''
